--- a/analysis_brt_elecmix.Rmd
+++ b/analysis_brt_elecmix.Rmd
@@ -13,6 +13,7 @@ library(lubridate)
 library(gt)
 library(ggplot2)
 library(ggrepel)
+library(scales)
 options(scipen=999)
 ```
 
@@ -32,22 +33,25 @@ The Great Britain is daring greatly toward the end of the coal era. Only two yea
 ## Data Cleaning
 
 ```{r}
-# Load dataset
+# Load dataset from Grid Watch 
 elec_raw <- read.csv("data/gridwatch.csv")
 
-# Extract years from the time data
+## Extract years from the time data
 elec_raw$year <- year(ymd_hms(elec_raw$timestamp))
 
-# Calculate total output of all energy sources. We sum the capacities of pumped, hydro, oil, ocgt sources because they are negligible.
+## Calculate total output of all energy sources. We sum the capacities of pumped, hydro, oil, ocgt sources because they are negligible.
 elec_raw <- elec_raw %>% mutate(
   renewable = wind + solar + biomass,
   other = pumped + hydro + oil + ocgt)
 
-# Select variables of interest. We rename "ccgt" variable to "gas" for easy use of terms. We consider wind, solar, biomass as one category (renewable).
+## Select variables of interest. We rename "ccgt" variable to "gas" for easy use of terms. We consider wind, solar, biomass as one category (renewable).
 elec <- elec_raw %>% select(id, year, coal, nuclear, ccgt, renewable, other) %>% rename(gas=ccgt)
 
-# Check for missing values 
+## Check for missing values 
 colSums(is.na(elec))
+
+# Load dataset from Our World in Data, select Britain, filter by year, select variables of interest 
+co2_raw <- read.csv("data/owid-co2-data.csv") %>% filter(country=="United Kingdom", year > 2010) %>% select(year, co2, co2_growth_prct, coal_co2)
 
 ```
 
@@ -59,7 +63,7 @@ In the Grid Watch dataset, the unit of measurement for electricity output from e
 # Pivot the dataset longer and calculate yearly average by source.
 elec_long <- elec %>% pivot_longer(cols=coal:other,
                               names_to="source",
-                              values_to="output") 
+                              values_to="output") %>% filter(year!=2021)
 elec_calc <- elec_long %>% 
   group_by(year, source) %>% 
   summarize(output = round(mean(output),2) ) %>% arrange(desc(year)) %>% as.data.frame()
@@ -85,30 +89,36 @@ gt(mix_2020) %>% tab_header(
 
 ```
 
-In 2020, coal power produced only `r mix_2020[1,3]`% of Britain's electricity. Britain is indeed on its way to phasing out of coal power. On the other hand, renewables are on the rise, accounting for `r mix_2020[4,1]`% of the energy mix. However, as gas production remains dominant, energy production from renewables is still lower than fossil fuels. 
 
-# What led to the decline of coal? What are some historical trends? 
+In 2020, coal power produced only `r mix_2020[1,3]`% of Britain's electricity. Britain is indeed on its way to phasing out of coal power. On the other hand, renewables are on the rise, accounting for `r mix_2020[4,2]`% of the energy mix. However, as gas production remains dominant, energy production from renewables is still lower than fossil fuels. 
 
-Coal power generation peaked in 2012, and declined rapidly ever since. According to [Carbon Brief](https://www.carbonbrief.org/countdown-to-2025-tracking-the-uk-coal-phase-out), 8.4GW of coal power plants have closed since 2010. Closure of the last coal power station in Britain is scheduled in 2025. Tightening regulations around air pollution and carbon emissions, public demand for coal phase-out due to safety and health concerns as well as the falling price of gas and renewables fostered the closure of coal power plants, as coal companies were operating at a loss.
+# What led to the decline of coal?  
+
+The decline of coal power in Britain was already underway well before the government's announcement of coal phase-out commitment in 2018. After reaching its peak in 2012, coal started rapidly declining, as the graph below demonstrates. According to [Carbon Brief](https://www.carbonbrief.org/countdown-to-2025-tracking-the-uk-coal-phase-out), 8.4GW of coal power plants have closed since 2010. Closure of the last coal power station in Britain is scheduled in 2025. 
+
+The decline of coal can be attributed to tightened regulations for air pollution control and tackling climate change. Of particular influence was imposing [carbon tax](https://www.ft.com/content/a05d1dd4-dddd-11e9-9743-db5a370481bc) on companies that produce electricity from fossil fuels in 2013. In addition, all new coal power plants were required to be equipped with carbon capture and storage (CCS) system, which is prohibitively expensive. The carbon tax and CCS requirement led to the loss of business case for coal. 
 
 
 ```{r}
 coal <- elec_calc %>% filter(source=="coal")
+coal$year <- as.integer(coal$year)
 
 ggplot(coal, aes(x=year, y=output)) + geom_area(alpha=0.5) +
   labs(title = "Change in Coal Power Generation 2011-2020",
         y="Output in MW") +
+    theme_minimal() + 
   theme(axis.title.x=element_blank()) + 
-  theme_light() + 
   geom_point(alpha=0.4) +
-  geom_text_repel(aes(label=output))
+  geom_text_repel(aes(label=output)) +   
+  scale_x_continuous(breaks=pretty_breaks())
+
 
 ```
 
 
 ### 3. How has other sources of electricity flared in comparison to coal? Can the growth of renewables pace with the rate of decline of coal?  
 
-General overview of change in electricity output of all data sources shows us that the production of electricity from coal has dropped significantly over the years. However, growth of renewables (solar, wind, biomass) cannot is slower than the pace of coal's decline. As a result, gas has become the primary source of energy for Britain. While nuclear power has been somewhat declining, nuclear power still takes up `r mix_2020[2,3]` % of the energy mix. 
+General overview of change in electricity output of all data sources shows that the production of electricity from coal has dropped significantly over the years. However, growth of renewables (solar, wind, biomass) is slower than the pace of coal's decline. Instead, gas has replaced coal, accounting for `r mix_2020[5,3]` % of the energy mix. Especially in 2020, wind power Meanwhile, nuclear power generation shows slow decline, taking up `r mix_2020[3,3]`% of the energy mix. 
 
 ```{r}
 # Factorize energy sources for plotting
@@ -124,6 +134,36 @@ ggplot(elec_calc, aes(x=year, y=output, fill=source)) +
 
 ```
 
+# Has the decline of coal power contributed to reducing carbon emissions in Britain?
+
+```{r}
+# Combine the dataset on co2 with coal production dataset and pivot it longer for graphing purpose
+#co2 <- merge(co2_raw, coal, by="year") %>% select(-source) %>% 
+#  rename(coal_output = output) 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# graph trends 
+ggplot(co2, aes(x=year, y=value, color=variable)) + 
+  geom_line()
+
+```
 
 
 # References 
@@ -133,3 +173,10 @@ BBC, 2019. _Energy Briefing_. Accessed on 03.01.2021. Retrieved from https://new
 Grid Watch, 2021. _G.B. National Grid Status._ Viewed 03.01.2021. \<http://gridwatch.templar.co.uk/\>
 
 Our World in Data, 2020. _Data on CO2 and Greenhouse Gas Emissions by Our World in Data_ Viewed 03.01.2021. \<https://github.com/owid/co2-data\>
+
+https://www.ft.com/content/a05d1dd4-dddd-11e9-9743-db5a370481bc
+
+
+
+
+
